got background working

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
    <head>
-      <title>The Render Engine - Spaceroids</title>
+      <title>Pistol Slut</title>
 
 		<!-- ChromeFrame Support -->
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -67,7 +67,7 @@
       </style>
    </head>
    <body>
-      <span id="loading">Loading Asteroids...
+      <span id="loading">Loading Pistol Slut...
          <div id="engine-load-progress"></div><span id="engine-load-info"></span>
       </span>
       <script type="text/javascript">
