--- a/index.html
+++ b/index.html
@@ -1,43 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<!--
-   /**
-    * The Render Engine
-    * Example Game: Spaceroids - an Asteroids clone
-    *
-    * This is an example of using The Render Engine to create a simple
-    * game.  This game is based off of the popular vector shooter, Asteroids,
-    * which is (c)Copyright 1979 - Atari Corporation.
-    *
-    *
-    * @author: Brett Fattori (brettf@renderengine.com)
-    *
-    * @author: $Author: bfattori $
-    * @version: $Revision: 755 $
-    *
-    * Copyright (c) 2008 Brett Fattori (brettf@renderengine.com)
-    *
-    * Permission is hereby granted, free of charge, to any person obtaining a copy
-    * of this software and associated documentation files (the "Software"), to deal
-    * in the Software without restriction, including without limitation the rights
-    * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-    * copies of the Software, and to permit persons to whom the Software is
-    * furnished to do so, subject to the following conditions:
-    *
-    * The above copyright notice and this permission notice shall be included in
-    * all copies or substantial portions of the Software.
-    *
-    * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-    * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-    * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-    * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-    * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-    * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-    * THE SOFTWARE.
-    *
-    */
--->
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
    <head>
       <title>Pistol Slut</title>
@@ -72,7 +34,7 @@
       </span>
       <script type="text/javascript">
          // Load the game script
-         Engine.loadGame('game.js','Spaceroids');
+         Engine.loadGame('game.js','PistolSlut');
       </script>
    </body>
 </html>
