fixed paths to main js files in index.html for remote use

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 
       <!-- Supporting Libraries -->
-      <script type="text/javascript" src="../../libs/base.js"></script>
-      <script type="text/javascript" src="../../libs/jquery-1.2.6.js"></script>
-      <script type="text/javascript" src="../../libs/jquery.ext.engine.js"></script>
-      <script type="text/javascript" src="../../libs/sylvester.js"></script>
+      <script type="text/javascript" src="libs/base.js"></script>
+      <script type="text/javascript" src="libs/jquery-1.2.6.js"></script>
+      <script type="text/javascript" src="libs/jquery.ext.engine.js"></script>
+      <script type="text/javascript" src="libs/sylvester.js"></script>
 
       <!-- Load the main engine script -->
-      <script type="text/javascript" src="../../engine/runtime/engine.js"></script>
+      <script type="text/javascript" src="engine/runtime/engine.js"></script>
       <style type="text/css">
          #engine-load-progress {
             position: relative;
