--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
    <head>
       <title>Pistol Slut</title>
@@ -36,5 +35,22 @@
          // Load the game script
          Engine.loadGame('game.js','PistolSlut');
       </script>
+
+
+			<div class="intro">
+				<h3>Pistol Slut</h3><br/>
+				by <a href='http://maryrosecook.com'>maryrosecook</a>
+				<br/><br/>
+
+				Thank you to Brett Fattori for <a href='http://renderengine.com'>The Render Engine</a>,
+				the framework upon which Pistol Slut is based.
+				
+				<br/><br/>
+				Tested in <a href='http://google.com/chrome'>Google Chrome</a> 5.0
+				and <a href='http://www.apple.com/safari/'>Safari</a> 4.0.3
+				<br/><br/>				
+				v. 0.1
+
+			</div>
    </body>
 </html>
