decluttered the about section

--- a/index.html
+++ b/index.html
@@ -38,18 +38,21 @@
 
 
 			<div class="intro">
-				<h3>Pistol Slut</h3><br/>
-				by <a href='http://maryrosecook.com'>maryrosecook</a>
-				<br/><br/>
-
-				Thank you to Brett Fattori for <a href='http://renderengine.com'>The Render Engine</a>,
-				the framework upon which Pistol Slut is based.
+				<h3>Pistol Slut</h3> &nbsp;v0.1&nbsp;
+				<span id="about_link">
+					<a href='#' onclick="$('#about_link').hide(); $('#about').show();">about</a>
+				</span>
 				
-				<br/><br/>
-				Tested in <a href='http://google.com/chrome'>Google Chrome</a> 5.0
-				and <a href='http://www.apple.com/safari/'>Safari</a> 4.0.3
-				<br/><br/>				
-				v. 0.1
+				<span id="about" style="display:none;"><br/>
+					by <a href='http://maryrosecook.com'>maryrosecook</a>
+					<br/><br/>
+					Thank you to Brett Fattori for <a href='http://renderengine.com'>The Render Engine</a>,
+					the framework upon which Pistol Slut is based.
+				
+					<br/><br/>
+					Tested in <a href='http://google.com/chrome'>Google Chrome</a> 5.0
+					and <a href='http://www.apple.com/safari/'>Safari</a> 4.0.3
+				</span>
 
 			</div>
    </body>
