added key mappings to html page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 					Tested in <a href='http://google.com/chrome'>Google Chrome</a> 5.0
 					and <a href='http://www.apple.com/safari/'>Safari</a> 4.0.3
 				</span>
-
+				<br/><br/>
+				&larr; &rarr; &uarr; &darr; z x
+				
 			</div>
 			
 			<script type="text/javascript">
