grenades, impotent and invicible enemy

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 					The <a href='http://github.com/maryrosecook/pistolslut'>code</a> is open source
 					and released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
+					<br/><br/>
+					<b>New</b>: grenades (press c), an invincible and impotent enemy.
+					
 				</span>
 				<br/><br/>
 
