dying enemy; rate limiters on shooting and throwing; blocking wall at the end of the level

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
          Engine.loadGame('game.js','PistolSlut');
       </script>
 
-
 			<div class="intro">
 				<h3>Pistol Slut</h3> 
 
-				
 				<span id="about" >
 					<br/>
 					by <a href='http://maryrosecook.com'>maryrosecook</a>
 					<br/><br/>
-					&larr; &rarr; &uarr; &darr; z x
+					&larr; &rarr; &uarr; &darr; z x c
 					<br/><br/>
-					Tested in <a href='http://google.com/chrome'>Google Chrome</a> 5.0
-					and <a href='http://www.apple.com/safari/'>Safari</a> 4.0.3
+					Use <a href='http://google.com/chrome'>Google Chrome</a>.
+					<br/><br/>
+					Also works in <a href='http://www.apple.com/safari/'>Safari</a>
+					and <a href='http://firefox.com'>Firefox</a>.
 					<br/><br/>
 					The <a href='http://github.com/maryrosecook/pistolslut'>code</a> is open source
 					and released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
@@ -59,7 +59,6 @@
 				</span>
 				<br/><br/>
 
-				
 			</div>
 			
 			<script type="text/javascript">
