added free shop sign and autonomous space

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<br/><br/>
 					&larr; &rarr; &uarr; &darr; z x c
 					<br/><br/>
-					Use <a href='http://google.com/chrome'>Google Chrome</a>.
+					Use Google <a href='http://google.com/chrome'>Chrome</a>.
 					<br/><br/>
 					Also works in <a href='http://www.apple.com/safari/'>Safari</a>
 					and <a href='http://firefox.com'>Firefox</a>.
@@ -54,7 +54,7 @@
 					and released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					<b>New</b>: grenades (press c), an invincible and impotent enemy.
+					<b>New</b>: a mortal enemy, a hideout, grenades.
 					
 				</span>
 				<br/><br/>
