--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					and released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					<b>New</b>: a mortal enemy, a hideout, grenades.
+					<b>New</b>: speedups, a mortal player, a mortal and armed enemy, a free shop, grenades.
 					
 				</span>
 				<br/><br/>
