--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<br/>
 					by <a href='http://maryrosecook.com'>maryrosecook</a>
 					<br/><br/>
-					&larr; &rarr; &uarr; &darr; z x c
+					&larr; &rarr; &uarr; &darr; z x c r
 					<br/><br/>
 					Use Google <a href='http://google.com/chrome'>Chrome</a>.
 					<br/><br/>
@@ -37,14 +37,14 @@
 					and <a href='http://firefox.com'>Firefox</a>.
 					<br/><br/>
 					The <a href='http://github.com/maryrosecook/pistolslut'>code</a> is open source
-					and released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
+					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					<b>New</b>: speedups, a mortal player, a mortal and armed enemy, a free shop, grenades.
-					
+					<b>New</b>: advice from Sluts With Guns via signs, pistol now semi-automatic, blood spurts,
+					expendable clips, reloading (press r), crouching, bins, speedups,
+					a mortal player, a mortal and armed enemy, a free shop, grenades.
 				</span>
 				<br/><br/>
-
 			</div>
 			
 			<script type="text/javascript">
