bodies get thrown backwards when they die

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					<b>New</b>: advice from Sluts With Guns via signs, pistol now semi-automatic, blood spurts,
+					<b>New</b>: bodies get thrown backwards when they die, advice from Sluts With Guns,
+					pistol now semi-automatic, blood spurts,
 					expendable clips, reloading (press r), crouching, bins, speedups,
 					a mortal player, a mortal and armed enemy, a free shop, grenades. 
 				</span>
