can no longer enemies dodge incoming fire and can be suppressed, enemies turn towards you, keys remapped, rapid fire means lower accuracy, no more hover crouch, standing up with direction pressed means player continues running

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<br/>
 					by <a href='http://maryrosecook.com'>maryrosecook</a>
 					<br/><br/>
-					&larr; &rarr; &uarr; &darr; z x c r
+					&larr; &rarr; &uarr; &darr; z x c
 					<br/><br/>
 					Use Google <a href='http://google.com/chrome'>Chrome</a>.
 					<br/><br/>
@@ -40,9 +40,11 @@
 					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					<b>New</b>: bodies get thrown backwards when they die, advice from Sluts With Guns,
-					pistol now semi-automatic, blood spurts,
-					expendable clips, reloading (press r), crouching, bins, speedups,
+					New: enemies dodge incoming fire and can be suppressed, enemies turn towards you, 
+					<strong>keys remapped</strong>, rapid fire means lower accuracy,
+					dead bodies thrown backwards,
+					advice from Sluts With Guns, pistol semi-automatic, blood spurts,
+					gun magazines, reloading (press c), crouching, bins, speedups,
 					a mortal player, a mortal and armed enemy, a free shop, grenades. 
 				</span>
 				<br/><br/>
