updated list of new features and removed redundant changes.txt

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					New: enemies dodge incoming fire and can be suppressed, enemies turn towards you, 
-					<strong>keys remapped</strong>, rapid fire means lower accuracy,
+					New: MAC-10 sub-machine gun and SPAS shotgun, enemies dodge incoming fire and can be suppressed,
+					enemies turn towards you,  <strong>keys remapped</strong>, rapid fire means lower accuracy,
 					dead bodies thrown backwards,
 					advice from Sluts With Guns, pistol semi-automatic, blood spurts,
 					gun magazines, reloading (press c), crouching, bins, speedups,
