--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<br/>
 					by <a href='http://maryrosecook.com'>maryrosecook</a>
 					<br/><br/>
-					&larr; &rarr; &uarr; &darr; &nbsp; z x &nbsp; a s
+					&larr; &rarr; &uarr; &darr; z x a s
 					<br/><br/>
 					Use Google <a href='http://google.com/chrome'>Chrome</a>.
 					<br/><br/>
@@ -40,9 +40,9 @@
 					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					New: MAC-10 sub-machine gun and SPAS shotgun (press s to draw), <strong>keys remapped again</strong>,
+					New: MAC-10 sub-machine gun and SPAS shotgun (press s to switch weapons), <strong>keys remapped again</strong>,
 					enemies dodge incoming fire and can be suppressed,
-					enemies turn towards you,  keys remapped, rapid fire means lower accuracy,
+					enemies turn towards you, rapid fire means lower accuracy,
 					dead bodies thrown backwards,
 					advice from Sluts With Guns, pistol semi-automatic, blood spurts,
 					gun magazines, reloading (press c), crouching, bins, speedups,
