Yes, Pistol Slut tweets.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 					advice from Sluts With Guns, pistol semi-automatic, blood spurts,
 					gun magazines, reloading (press c), crouching, bins, speedups,
 					a mortal player, a mortal and armed enemy, a free shop, grenades. 
+					
+					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
 				</span>
 				<br/><br/>
 			</div>
