--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
       </script>
 
 			<div class="intro">
-				<h3>Pistol Slut</h3> 
-
-				<span id="about" >
+				<span id="about">
+					<div class="icon">
+						<img src='/favicon.gif' width="35" />
+					</div>
+					<div class="title">
+						<h3>Pistol Slut</h3><br/>
+						by <a href='http://maryrosecook.com'>maryrosecook</a>
+					</div>
 					<br/>
-					by <a href='http://maryrosecook.com'>maryrosecook</a>
-					<br/><br/>
 					&larr; &rarr; &uarr; &darr; z x a s
 					<br/><br/>
 					Use Google <a href='http://google.com/chrome'>Chrome</a>.
