--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
 					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					New: MAC-10 sub-machine gun and SPAS shotgun (press s), <strong>keys remapped again</strong>,
-					enemies dodge incoming fire and can be suppressed,
-					enemies turn towards you, rapid fire means lower accuracy,
-					dead bodies thrown backwards,
-					advice from Sluts With Guns, pistol semi-automatic, blood spurts,
-					gun magazines, reloading (press c), crouching, bins, speedups,
+					New: MAC-10 and SPAS shotgun (press s), <strong>keys remapped again</strong>,
+					enemies can be suppressed, recoil,
+					advice from Sluts With Guns, blood spurts,
+					reloading, crouching, bins, speedups,
 					a mortal player, a mortal and armed enemy, a free shop, grenades.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
