grenades kill; shrapnel and bullets make ricochets; sorted out some sprite alignments

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
 					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					New: MAC-10 and SPAS shotgun (press s), <strong>keys remapped again</strong>,
+					New: grenades kill, better ricochets, MAC-10 and SPAS shotgun (press s), 
+					<strong>keys remapped again</strong>,
 					enemies can be suppressed, recoil,
 					advice from Sluts With Guns, blood spurts,
 					reloading, crouching, bins, speedups,
-					a mortal player, a mortal and armed enemy, a free shop, grenades.
+					a mortal player, a mortal and armed enemy.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
 				</span>
