game starts paused; more accurate prompts to reload from signs; key map

--- a/index.html
+++ b/index.html
@@ -32,19 +32,15 @@
 						by <a href='http://maryrosecook.com'>maryrosecook</a>
 					</div>
 					<br/>
-					&larr; &rarr; &uarr; &darr; z x a s
-					<br/><br/>
+					<img src='/keys.gif' />
+					<br/>
 					Use Google <a href='http://google.com/chrome'>Chrome</a>.
-					<br/><br/>
-					Also works in <a href='http://www.apple.com/safari/'>Safari</a>
-					and <a href='http://firefox.com'>Firefox</a>.
 					<br/><br/>
 					The <a href='http://github.com/maryrosecook/pistolslut'>code</a> is open source
 					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					New: grenades kill, better ricochets, MAC-10 and SPAS shotgun (press s), 
-					<strong>keys remapped again</strong>,
+					New: grenades kill people, better ricochets, MAC-10 and SPAS shotgun,
 					enemies can be suppressed, recoil,
 					advice from Sluts With Guns, blood spurts,
 					reloading, crouching, bins, speedups,
