--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					New: grenades kill people, better ricochets, MAC-10 and SPAS shotgun,
+					New: fires, grenades kill people, better ricochets, MAC-10 and SPAS shotgun,
 					enemies can be suppressed, recoil,
 					advice from Sluts With Guns, blood spurts,
 					reloading, crouching, bins, speedups,
