--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
 			<div class="intro">
 				<span id="about">
 					<div class="icon">
-						<img src='/favicon.gif' width="35" />
+						<img src='/favicon.gif' />
 					</div>
 					<div class="title">
 						<h3>Pistol Slut</h3><br/>
 						by <a href='http://maryrosecook.com'>maryrosecook</a>
 					</div>
-					<br/>
+					<br/><br/>
+					A 2D shoot-em-up platformer written in JavaScript.
+					
 					<img src='/resources/keys.gif' />
 					<br/>
 					Use Google <a href='http://google.com/chrome'>Chrome</a>.
