--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
 					<br/><br/>
-					New: fireworks, fires, grenades kill people, better ricochets, MAC-10 and SPAS shotgun,
+					New: day/night cycling, new enemy, fireworks, fires, 
+					grenades kill people, better ricochets, MAC-10 and SPAS shotgun,
 					enemies can be suppressed, recoil,
 					advice from Sluts With Guns, blood spurts,
-					reloading, crouching, bins, speedups,
-					a mortal player, a mortal and armed enemy.
+					reloading, crouching.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
 				</span>
