proper midday included in the day night cycle; cleaned up index page

--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
 					<br/>
 					Use Google <a href='http://google.com/chrome'>Chrome</a>.
 					<br/><br/>
-					The <a href='http://github.com/maryrosecook/pistolslut'>code</a> is open source
-					and has been released under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
-					Pistol Slut uses <a href='http://renderengine.com'>The Render Engine</a> by Brett Fattori.
-					<br/><br/>
-					New: day/night cycling, new enemy, fireworks, fires, 
+					New: day to night, new enemy, fireworks, fires, 
 					grenades kill people, better ricochets, MAC-10 and SPAS shotgun,
 					enemies can be suppressed, recoil,
 					advice from Sluts With Guns, blood spurts,
 					reloading, crouching.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
+
+					<hr>
+					The <a href='http://github.com/maryrosecook/pistolslut'>code</a> has been open sourced
+					under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
+					It includes <a href='http://renderengine.com'>The Render Engine</a> by B. Fattori.
 				</span>
 				<br/><br/>
 			</div>
