parallax; signs now white; day night cycling in greyscale

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<br/>
 					Use Google <a href='http://google.com/chrome'>Chrome</a>.
 					<br/><br/>
-					New: day to night, new enemy, fireworks, fires, 
+					New: parallax scrolling, day to night, new enemy, fires, 
 					grenades kill people, better ricochets, MAC-10 and SPAS shotgun,
 					enemies can be suppressed, recoil,
 					advice from Sluts With Guns, blood spurts,
