--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 					<br/>
 					Use Google <a href='http://google.com/chrome'>Chrome</a>.
 					<br/><br/>
-					New: ammo meter, parallax scrolling, day to night, new enemy, fires, 
-					grenades kill people, better ricochets, MAC-10 and SPAS shotgun,
+					New: works in Safari, ammo meter, parallax scrolling,
+					day to night, new enemy, fires, grenades kill people, better ricochets, MAC-10 and SPAS shotgun,
 					enemies can be suppressed, recoil,
 					advice from Sluts With Guns, blood spurts,
 					reloading, crouching.
