widescreen; level triggers now work over ranges

--- a/index.html
+++ b/index.html
@@ -37,15 +37,12 @@
 					<img src='/resources/keys.gif' />
 					<br/>
 					Use Google <a href='http://google.com/chrome'>Chrome</a>.
-					<br/><br/>
-					New: chinese lanterns, enemies throw grenades, works in Safari, ammo meter, parallax scrolling,
-					day to night, new enemy, fires, grenades kill people, better ricochets, MAC-10 and SPAS shotgun,
-					enemies can be suppressed, recoil,
-					advice from Sluts With Guns, blood spurts,
-					reloading, crouching.
-					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
-
+					
+					<br/><br/>
+					New: widescreen, enemies talk, chinese lanterns,
+					works in Safari, ammo meter, parallax scrolling, fireworks, day to night, fires,
+					MAC-10 and SPAS shotgun, enemies can be suppressed, recoil, blood spurts.
 					<hr>
 					The <a href='http://github.com/maryrosecook/pistolslut'>code</a> has been open sourced
 					under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
