mortar additions; sandbags; bus stops

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 					
 					<br/><br/>
-					New: widescreen, enemies talk, chinese lanterns,
+					New: mortars, widescreen, enemies talk, chinese lanterns,
 					works in Safari, ammo meter, parallax scrolling, fireworks, day to night, fires,
 					MAC-10 and SPAS shotgun, enemies can be suppressed, recoil, blood spurts.
 					<br/><br/>
