third enemy; simpler controls

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						2D platform shooter in JavaScript
 					</div>
 
-					<img src='/resources/keys.gif' /><br/>
+					<p class="keys"><img src='/resources/keys.gif' /></p>
 					
 					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 					
