enemies no longer fire into furniture sitting right in front of them

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					
 					<br/><br/>
 					New: mortars, widescreen, enemies talk, chinese lanterns,
-					works in Safari, ammo meter, parallax scrolling, fireworks, day to night, fires,
+					works in Safari, ammo meter, parallax scrolling, fireworks, fires,
 					MAC-10 and SPAS shotgun, enemies can be suppressed, recoil, blood spurts.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
