--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					
 					<br/><br/>
 					New: mortars, widescreen, enemies talk, chinese lanterns,
-					works in Safari, ammo meter, parallax scrolling,
+					ammo meter, parallax scrolling,
 					MAC-10 and SPAS shotgun, enemies can be suppressed.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
