--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 					
 					<br/><br/>
-					New: aimable grenades (hold c), works in Safari, mortars, widescreen, enemies talk, chinese lanterns,
+					New: transparencies; lifts; aimable grenades (hold c), works in Safari, mortars,
+					widescreen, enemies talk, chinese lanterns,
 					ammo meter, parallax scrolling,
 					MAC-10 and SPAS shotgun, enemies can be suppressed.
 					<br/><br/>
