updated home page with new features

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 					
 					<br/><br/>
-					New: transparencies; lifts; aimable grenades (hold c), works in Safari, mortars,
+					New: transparencies, aimable grenades (hold c), lifts, mortars,
 					widescreen, enemies talk, chinese lanterns,
 					ammo meter, parallax scrolling,
 					MAC-10 and SPAS shotgun, enemies can be suppressed.
