--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 
 					<br/><br/>
-					New: exploding barrel trope, transparencies, aimable grenades (hold c), lifts, mortars,
-					widescreen, enemies talk, chinese lanterns,
-					ammo meter, parallax scrolling,
+					New: multiple weapons for enemies, spotters for mortarers, exploding barrel trope,
+                    aimable grenades (hold c), lifts,
+					widescreen, enemies talk
+					parallax scrolling,
 					MAC-10 and SPAS shotgun, enemies can be suppressed.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
