--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 
 					<br/><br/>
-					New: multiple weapons for enemies, spotters for mortarers, exploding barrel trope,
+					New: long-overdue grenade throwing animations, multiple weapons for enemies,
+                    spotters for mortarers, exploding barrel trope,
                     aimable grenades (hold c), lifts,
 					widescreen, enemies talk
 					parallax scrolling,
