split up gantry for performance; updated logo and favicon

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="intro">
 				<span id="about">
 					<div class="icon">
-						<img src='/favicon.gif' />
+						<img src='/logo.gif' />
 					</div>
 					<div class="title">
 						<h3>Pistol Slut</h3><br/>
