--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
 					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 
 					<br/><br/>
-					New: long-overdue grenade throwing animations, multiple weapons for enemies,
-                    spotters for mortarers, exploding barrel trope,
+					New: a nice park, multiple weapons for enemies,
+                    spotters for mortarers,
                     aimable grenades (hold c), lifts,
-					widescreen, enemies talk
-					parallax scrolling,
 					MAC-10 and SPAS shotgun, enemies can be suppressed.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
