completed scaffolding; updated index page

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 
 					<br/><br/>
-					New: a nice park, multiple weapons for enemies,
-                    spotters for mortarers,
-                    aimable grenades (hold c), lifts,
+					New: windows, a nice park,
 					MAC-10 and SPAS shotgun, enemies can be suppressed.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
