--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 
 					<br/><br/>
-					New: windows, a nice park,
+					New: speedups, windows, a nice park,
 					MAC-10 and SPAS shotgun, enemies can be suppressed.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
