mortarers no longer mortar themselves; mortarers draw another weapon in close combat

--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
 					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 
 					<br/><br/>
-					New: speedups, a bridge, smashable windows, a nice park,
-					MAC-10 and SPAS shotgun, enemies can be suppressed.
+					New: speedups, a bridge, smashable windows, a nice park.
 					<br/><br/>
 					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
 
 					<hr>
-					The <a href='http://github.com/maryrosecook/pistolslut'>code</a> has been open sourced
+					The <a href='http://github.com/maryrosecook/pistolslut'>code</a> is open source,
 					under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
 					It includes <a href='http://renderengine.com'>The Render Engine</a> by B. Fattori.
 				</span>
