--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
 
       <!-- Load the main engine script -->
       <script type="text/javascript" src="engine/runtime/engine.js"></script>
+
+      <!-- notifications of the activity of other sluts -->
+      <script src="http://js.pusherapp.com/1.8/pusher.min.js" type="text/javascript"></script>
+      <script type="text/javascript">
+          // Enable pusher logging - don't include this in production
+          Pusher.log = function(message) {
+              if (window.console && window.console.log) window.console.log(message);
+          };
+
+          // Flash fallback logging - don't include this in production
+          WEB_SOCKET_DEBUG = true;
+
+          var pusher = new Pusher('c98b08a7c923700b55dc');
+          var channel = pusher.subscribe('other_sluts');
+          channel.bind('shoot', function(data) {
+              console.log("another slut shot her gun");
+          });
+      </script>
    </head>
    <body>
 
