made Machine.js a library, fixed several bugs as a result; made line of fire code better

--- a/index.html
+++ b/index.html
@@ -1,63 +1,64 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-   <head>
-      <title>Pistol Slut</title>
+  <head>
+    <title>Pistol Slut</title>
 
-	  <!-- ChromeFrame Support -->
-	  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<!-- ChromeFrame Support -->
+	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-      <!-- Supporting Libraries -->
-      <script type="text/javascript" src="libs/base.js"></script>
-      <script type="text/javascript" src="libs/jquery-1.2.6.js"></script>
-      <script type="text/javascript" src="libs/jquery.ext.engine.js"></script>
-      <script type="text/javascript" src="libs/sylvester.js"></script>
+    <!-- Supporting Libraries -->
+    <script type="text/javascript" src="libs/base.js"></script>
+    <script type="text/javascript" src="libs/jquery-1.2.6.js"></script>
+    <script type="text/javascript" src="libs/jquery.ext.engine.js"></script>
+    <script type="text/javascript" src="libs/sylvester.js"></script>
+    <script type="text/javascript" src="libs/machine.js"></script>
 
-      <!-- Load the main engine script -->
-      <script type="text/javascript" src="engine/runtime/engine.js"></script>
-   </head>
-   <body>
+    <!-- Load the main engine script -->
+    <script type="text/javascript" src="engine/runtime/engine.js"></script>
+  </head>
+  <body>
 
-      <script type="text/javascript">
-         // Load the game script
-         Engine.loadGame('game.js','PistolSlut');
-      </script>
+    <script type="text/javascript">
+      // Load the game script
+      Engine.loadGame('game.js','PistolSlut');
+    </script>
 
-			<div class="intro">
-				<span id="about">
-					<div class="icon">
-						<img src='/logo.gif' />
-					</div>
-					<div class="title">
-						<h1>Pistol Slut</h1><br/>
-						by <a href='http://maryrosecook.com'>maryrosecook</a><br/>
-						2D platform shooter in JavaScript
-					</div>
+	<div class="intro">
+	  <span id="about">
+		<div class="icon">
+		  <img src='/logo.gif' />
+		</div>
+		<div class="title">
+		  <h1>Pistol Slut</h1><br/>
+		  by <a href='http://maryrosecook.com'>maryrosecook</a><br/>
+		  2D platform shooter in JavaScript
+		</div>
 
-					<p class="keys"><img src='/resources/keys.gif' /></p>
+		<p class="keys"><img src='/resources/keys.gif' /></p>
 
-					Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
+		Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
 
-					<br/><br/>
-					<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
+		<br/><br/>
+		<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
 
-					<hr>
-					The <a href='http://github.com/maryrosecook/pistolslut'>code</a> is open source,
-					under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
-					It includes <a href='http://renderengine.com'>The Render Engine</a> by B. Fattori.
-				</span>
-				<br/><br/>
-			</div>
+		<hr>
+		  The <a href='http://github.com/maryrosecook/pistolslut'>code</a> is open source,
+		  under the <a href='http://www.opensource.org/licenses/mit-license.php'>MIT license</a>.
+		  It includes <a href='http://renderengine.com'>The Render Engine</a> by B. Fattori.
+		</span>
+		<br/><br/>
+	  </div>
 
-			<script type="text/javascript">
-			  var _gaq = _gaq || [];
-			  _gaq.push(['_setAccount', 'UA-3365983-16']);
-			  _gaq.push(['_trackPageview']);
+	  <script type="text/javascript">
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-3365983-16']);
+		_gaq.push(['_trackPageview']);
 
-			  (function() {
-			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			  })();
-			</script>
+		(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	 </script>
    </body>
-</html>
+ </html>
