--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
 		<div class="title">
 		  <h1>Pistol Slut</h1><br/>
-		  by <a href='http://maryrosecook.com'>maryrosecook</a><br/>
+		  by <a href='http://maryrosecook.com'>mary rose cook</a><br/>
 		  2D platform shooter in JavaScript
 		</div>
 
