new controls headsup

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
 		<p class="keys"><img src='/resources/keys.gif' /></p>
 
-		Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.
+		Use Google <a href='http://google.com/chrome'>Chrome</a>. Clear your cache and do a hard refresh.<br/><br/>
+
+        <strong>New controls</strong>
 
 		<br/><br/>
 		<a href='http://twitter.com/pistolslut'>Follow Pistol Slut</a> on Twitter.
