--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		  2D platform shooter in JavaScript
 		</div>
 
-		<p class="keys"><img src='/resources/keys.gif' /></p>
+		<p class="keys"><img src='/resources/keys.png' /></p>
 
 		Use Google <a href='http://google.com/chrome'>Chrome</a>.<br/><br/>
 
